tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__struct_parser__parse_simple_struct.snap
---
source: src/tests/parser/stmt_parser/struct_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 14,
        },
        kind: StructDecl {
            name: "Type",
            body: [],
        },
    },
]
