tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__struct_parser__parse_struct_field_and_func.snap
---
source: src/tests/parser/stmt_parser/struct_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 86,
        },
        kind: StructDecl {
            name: "Type",
            body: [
                ParserDeclStmt {
                    range: Range {
                        start: 18,
                        end: 36,
                    },
                    kind: StructField {
                        name: "field",
                        value_type: Some(
                            SymbolPath {
                                components: [
                                    SymbolPathComponent {
                                        symbol: "Int",
                                    },
                                ],
                            },
                        ),
                        def_val: [
                            ExprToken {
                                range: Range {
                                    start: 35,
                                    end: 36,
                                },
                                kind: IntLiteral(
                                    0,
                                ),
                            },
                        ],
                    },
                },
                ParserDeclStmt {
                    range: Range {
                        start: 41,
                        end: 84,
                    },
                    kind: FuncDecl {
                        is_static: false,
                        name: "process",
                        params: [
                            ParserFuncParam {
                                label: Some(
                                    "label",
                                ),
                                name: "name",
                                value_type: Some(
                                    SymbolPath {
                                        components: [
                                            SymbolPathComponent {
                                                symbol: "Type",
                                            },
                                        ],
                                    },
                                ),
                                def_val: None,
                                range: Range {
                                    start: 54,
                                    end: 70,
                                },
                            },
                        ],
                        return_type: Some(
                            SymbolPath {
                                components: [
                                    SymbolPathComponent {
                                        symbol: "Return",
                                    },
                                ],
                            },
                        ),
                        body: [],
                    },
                },
            ],
        },
    },
]
