tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__struct_parser__parse_struct_with_func.snap
---
source: src/tests/parser/stmt_parser/struct_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 63,
        },
        kind: StructDecl {
            name: "Type",
            body: [
                ParserDeclStmt {
                    range: Range {
                        start: 18,
                        end: 61,
                    },
                    kind: FuncDecl {
                        is_static: false,
                        name: "process",
                        params: [
                            ParserFuncParam {
                                label: Some(
                                    "label",
                                ),
                                name: "name",
                                value_type: Some(
                                    SymbolPath {
                                        components: [
                                            SymbolPathComponent {
                                                symbol: "Type",
                                            },
                                        ],
                                    },
                                ),
                                def_val: None,
                                range: Range {
                                    start: 31,
                                    end: 47,
                                },
                            },
                        ],
                        return_type: Some(
                            SymbolPath {
                                components: [
                                    SymbolPathComponent {
                                        symbol: "Return",
                                    },
                                ],
                            },
                        ),
                        body: [],
                    },
                },
            ],
        },
    },
]
